Learnt table and little bit of css

--- a/day1/basic.html
+++ b/day1/basic.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <style>
+            table, th, td{
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+        </style>
+    </head>
     <body>
         <h1>This is a heading 1</h1>
         <h2>This is a heading 2</h2>
@@ -50,7 +57,29 @@
 
          <a href="https://facebook.com" target="_blank"><h1>This is a heading  to facebook page</h1></a>
 
-
+        //Create Table with rows =TR heading=TH table data=TD
+        <table>
+            <tr>
+                <th>No.</th>
+                <th>Food name</th>
+                <th>Rating (Out of 10)</th>
+            </tr>
+            <tr>
+                <td>1.</td>
+                <td>Chicken rice</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>2.</td>
+                <td>Pizaa</td>
+                <td>8</td>
+            </tr>
+             <tr>
+                <td>3.</td>
+                <td>Roticanai</td>
+                <td>4.5</td>
+            </tr>
+        </table>
     </body>
     <footer></footer> 
 </html>
