--- a/day1/basic.html
+++ b/day1/basic.html
@@ -1,85 +1,94 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            table, th, td{
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>This is a heading 1</h1>
-        <h2>This is a heading 2</h2>
-        <h3>My name is Jeya</h3>
-        <h4>I teach Programming</h4>
-        <h5>This is another heading exmaple</h5>
-        <h6>For my students</h6>
+  <head>
+    <link rel="stylesheet" href="basic.css" />
+    <style>
+      h2 {
+        color: brown;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="color: red; font-size: 20px">This is a heading 1</h1>
+    <h2>This is a heading 2</h2>
+    <h3>My name is Jeya</h3>
+    <h4>I teach Programming</h4>
+    <h5>This is another heading exmaple</h5>
+    <h6 id="heading">For my students</h6>
 
-        <p>This is a paragraph</p>
+    //css selector looking for same class
+    <p class="para myPara">This is a paragraph</p>
 
-        <ol>
-            <li>Fried rice</li>
-            <li>Nasi Kandar</li>
-            <li>Pisang goreng</li>
-        </ol>
-        <ul>
-            <li>Badmiton</li>
-            <li>Rock Climbing</li>
-            <li>Pickle ball</li>
-            <li>Football</li>
-        </ul>
+    <ol>
+      <li>Fried rice</li>
+      <li>Nasi Kandar</li>
+      <li>Pisang goreng</li>
+    </ol>
+    <ul>
+      <li>Badmiton</li>
+      <li>Rock Climbing</li>
+      <li>Pickle ball</li>
+      <li>Football</li>
+    </ul>
 
-        <ul>Food that I like
-            <ol>
-                <li>Nasi Lemak</li>
-                <li>Chicken Rice</li>
-                <li>French Fries</li>
-            </ol>
-        </ul>
-        <ul>
-            Sports that I do
-            <ol>
-                <li>Rock Climbing /Bouldering </li>
-                <li>Pickle Ball</li>
-                <li>Volleyball</li>
-            </ol>
-        </ul>
+    <ul>
+      Food that I like
+      <ol>
+        <li>Nasi Lemak</li>
+        <li>Chicken Rice</li>
+        <li>French Fries</li>
+      </ol>
+    </ul>
+    <ul>
+      Sports that I do
+      <ol>
+        <li>Rock Climbing /Bouldering</li>
+        <li>Pickle Ball</li>
+        <li>Volleyball</li>
+      </ol>
+    </ul>
 
-        <a href="https://google.com" target="_blank">Link to Google</a>
-        <a href="https://youtube.com" target="_blank">Link to Youtube</a>
+    <a href="https://google.com" target="_blank">Link to Google</a>
+    <a href="https://youtube.com" target="_blank">Link to Youtube</a>
 
-        //Picture with hyperlink
-        <a href="https://en.wikipedia.org/wiki/Dog" target="_blank"><img src="dog2.jpg" width="300px"></a>
-        
-        //Copying image address and hyperlink to a webpage
-       <a href="https://www.google.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"></a>
+    //Picture with hyperlink
+    <a href="https://en.wikipedia.org/wiki/Dog" target="_blank"
+      ><img src="dog2.jpg" width="300px"
+    /></a>
 
-         <a href="https://facebook.com" target="_blank"><h1>This is a heading  to facebook page</h1></a>
+    //Copying image address and hyperlink to a webpage
+    <a href="https://www.google.com/" target="_blank"
+      ><img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1200px-Google_2015_logo.svg.png"
+    /></a>
 
-        //Create Table with rows =TR heading=TH table data=TD
-        <table>
-            <tr>
-                <th>No.</th>
-                <th>Food name</th>
-                <th>Rating (Out of 10)</th>
-            </tr>
-            <tr>
-                <td>1.</td>
-                <td>Chicken rice</td>
-                <td>9</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td>Pizaa</td>
-                <td>8</td>
-            </tr>
-             <tr>
-                <td>3.</td>
-                <td>Roticanai</td>
-                <td>4.5</td>
-            </tr>
-        </table>
-    </body>
-    <footer></footer> 
+    <a href="https://facebook.com" target="_blank"
+      ><h1>This is a heading to facebook page</h1></a
+    >
+
+    //Create Table with rows =TR heading=TH table data=TD
+    <table>
+      <tr>
+        <th>No.</th>
+        <th>Food name</th>
+        <th>Rating (Out of 10)</th>
+      </tr>
+      <tr>
+        <td>1.</td>
+        <td>Chicken rice</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>2.</td>
+        <td>Pizaa</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>3.</td>
+        <td>Roticanai</td>
+        <td>4.5</td>
+      </tr>
+    </table>
+  </body>
+  <footer></footer>
 </html>
